# apps/core-api/src/vehicle/dto/update-vehicle.dto.ts
@@ -1,0 +1,40 @@
+import {
+  IsInt,
+  IsOptional,
+  IsString,
+  IsUUID,
+  Max,
+  Min,
+} from 'class-validator';
+
+export class UpdateVehicleDto {
+  @IsString()
+  @IsOptional()
+  make?: string;
+
+  @IsString()
+  @IsOptional()
+  model?: string;
+
+  @IsInt()
+  @Min(1900)
+  @Max(2100)
+  @IsOptional()
+  year?: number;
+
+  @IsString()
+  @IsOptional()
+  engine_code?: string;
+
+  @IsString()
+  @IsOptional()
+  vin?: string;
+
+  @IsString()
+  @IsOptional()
+  plate?: string;
+
+  @IsUUID()
+  @IsOptional()
+  customer_id?: string | null;
+}
